--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     <div class="gridpadre">
         <div class="gridblue">
             <div class="hijo">
-                <img src="/assets/images/coffee.png" alt="">
+                <img src="assets/images/coffee.png" alt="">
                 <h1>COFFEE</h1>
                 <p>Apple pie icing sweet. Brownie jelly-o applicake <br> applicake sweet roll liquiorice bear claw. jujubes <br> carrot cake cotton candy sweet tart brownie. <br> Tiramisu applicake jujubes.</p>
             </div>
             <div class="hijo">
-                <img src="/assets/images/instant.png" alt="">
+                <img src="assets/images/instant.png" alt="">
                 <h1>INSTANT</h1>
                 <p>Apple pie icing sweet. Brownie jelly-o applicake <br> applicake sweet roll liquiorice bear claw. jujubes <br> carrot cake cotton candy sweet tart brownie. <br> Tiramisu applicake jujubes.</p>
             </div>
             <div class="hijo">
-                <img src="/assets/images/serious.png" alt="">
+                <img src="assets/images/serious.png" alt="">
                 <h1>SERIOUS</h1>
                 <p>Apple pie icing sweet. Brownie jelly-o applicake <br> applicake sweet roll liquiorice bear claw. jujubes <br> carrot cake cotton candy sweet tart brownie. <br> Tiramisu applicake jujubes.</p>
             </div>
             <div class="hijo">
-                <img src="/assets/images/frame.png" alt="">
+                <img src="assets/images/frame.png" alt="">
                 <h1>FRAME</h1>
                 <p>Apple pie icing sweet. Brownie jelly-o applicake <br> applicake sweet roll liquiorice bear claw. jujubes <br> carrot cake cotton candy sweet tart brownie. <br> Tiramisu applicake jujubes.</p>
             </div>
@@ -68,14 +68,14 @@
                 </div>
             </header>
             <gridimg>
-                <div class="hijo"><img src="/assets/images/photo01.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo02.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo03.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo04.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo05.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo06.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo07.png" alt=""></div>
-                <div class="hijo"><img src="/assets/images/photo08.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo01.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo02.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo03.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo04.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo05.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo06.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo07.png" alt=""></div>
+                <div class="hijo"><img src="assets/images/photo08.png" alt=""></div>
             </gridimg>
         </div>
         <div class="section2">
@@ -89,13 +89,13 @@
                     Muffin chupa chups jely beans sweet pie applicake. Croissant chocolate <br> cake i love pudding, Ice cream i love powder pudding apple pie <br> marshmallow. Cupcake marzipan oat cake bonbon i love candy canes <br> toffee.</p>
                     <button>VISIT ME</button>
                 </left>
-                <right><img src="/assets/images/VimeoVideo.png" alt=""></right>
+                <right><img src="assets/images/VimeoVideo.png" alt=""></right>
             
         </div>
         <tweet>
             <div class="infotwet">
                 <div class="title"><h1>TWITTER</h1></div>
-                <div class="twet"><img src="/assets/images/icon-twitter.png" alt=""></div>
+                <div class="twet"><img src="assets/images/icon-twitter.png" alt=""></div>
             </div>
             <p>Unerdwear cookie liquiorice. Caje donut cupcake lollipop souffle candy. Chocolate oat cake <br> <textlink>@cheesecake</textlink> tootsie roll.</p>
         </tweet>
@@ -114,10 +114,10 @@
                     <div class="right">
                         <p>Padding dessert tiramisu gingerbread croissant tiramusi applicake. Seame snaps <br> sugar plum cotton candy chocolate bonbon lemon drips candy canes cotton candy. Cake <br> toffe pie bear claw pastry.</p>
                         <imgs>
-                            <img src="/assets/images/icon-twitterF.png" alt="">
-                            <img src="/assets/images/icon-google-plusF.png" alt="">
-                            <img src="/assets/images/icon-dribbbleF.png" alt="">
-                            <img src="/assets/images/icon-coffeeF.png" alt="">
+                            <img src="assets/images/icon-twitterF.png" alt="">
+                            <img src="assets/images/icon-google-plusF.png" alt="">
+                            <img src="assets/images/icon-dribbbleF.png" alt="">
+                            <img src="assets/images/icon-coffeeF.png" alt="">
                         </imgs>
                     </div>
             </contenedor>
@@ -125,7 +125,7 @@
         <div class="section4">
             <titulo>
                 <h1>TESTIMONIALS</h1>
-                <img src="/assets/images/icon-comill.png" alt="">
+                <img src="assets/images/icon-comill.png" alt="">
             </titulo>
             <texto>
                 <p>Applicake chocolate cake wafer toffee pue soffle wafer. Tart marshmallow wafer macaroon <br> cheesecaje jelly. Gingerbread cookie souffle sweet roll sweet roll jelly-o</p>
